# mmdetection

./: .gitignore  pyproject.toml
configs/_base_/datasets/: coco_detection.py
configs/_base_/models/: cascade_mask_rcnn_r50_fpn.py  cascade_rcnn_r50_fpn.py
configs/example_mask_rcnn/: emrcnn_r50_fpn_bn_.py
configs/trackMPNN_detector/: README.md  cascade_rcnn_x101_32x4d_fpn_dconv_c3-c5_1x_coco.py  libra_cascade_rcnn_x101_32x4d_fpn_dconv_c3-c5_1x_bdd100k.py  libra_cascade_rcnn_x101_32x4d_fpn_dconv_c3-c5_1x_coco.py  libra_cascade_rcnn_x101_32x4d_fpn_dconv_c3-c5_1x_coco_stage1.py  libra_cascade_rcnn_x101_32x4d_fpn_dconv_c3-c5_1x_coco_stage2.py  primitive_config.py  trackmpnn_detector.py
mmdet/datasets/: coco.py
tools/work_dir/: trackmpnn_detector.py
