[tool.poetry]
name = "mmdetection"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.6.9"
Cython = "^0.29.21"
terminaltables = "^3.1.0"
asynctest = "^0.13.0"
six = "^1.15.0"
matplotlib = "^3.3.3"
mmpycocotools = "^12.0.3"
codecov = "^2.1.11"
numpy = "^1.19.5"
flake8 = "^3.8.4"
interrogate = "^1.3.2"
isort = "4.3.21"
kwarray = "^0.5.13"
pytest = "^6.2.1"
ubelt = "^0.9.4"
xdoctest = "^0.15.2"
yapf = "^0.30.0"
sklearn = "^0.0"
scipy = "1.5"
mmlvis = "^10.5.3"
imagecorruptions = "^1.1.2"
cityscapesScripts = "^2.2.0"
albumentations = "^0.5.2"
mmcv-full = "^1.2.6"
torchvision = "^0.8.2"
torch = "^1.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
